; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo_vdpau.c_query_format.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo_vdpau.c_query_format.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo = type { %struct.vdpctx* }
%struct.vdpctx = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vo*, i32)* @query_format to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @query_format(%struct.vo* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.vo*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.vdpctx*, align 8
  store %struct.vo* %0, %struct.vo** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.vo*, %struct.vo** %4, align 8
  %8 = getelementptr inbounds %struct.vo, %struct.vo* %7, i32 0, i32 0
  %9 = load %struct.vdpctx*, %struct.vdpctx** %8, align 8
  store %struct.vdpctx* %9, %struct.vdpctx** %6, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i64 @mp_vdpau_get_format(i32 %10, i32* null, i32* null)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %25

14:                                               ; preds = %2
  %15 = load %struct.vdpctx*, %struct.vdpctx** %6, align 8
  %16 = getelementptr inbounds %struct.vdpctx, %struct.vdpctx* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %24, label %19

19:                                               ; preds = %14
  %20 = load i32, i32* %5, align 4
  %21 = call i64 @mp_vdpau_get_rgb_format(i32 %20, i32* null)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %19
  store i32 1, i32* %3, align 4
  br label %25

24:                                               ; preds = %19, %14
  store i32 0, i32* %3, align 4
  br label %25

25:                                               ; preds = %24, %23, %13
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i64 @mp_vdpau_get_format(i32, i32*, i32*) #1

declare dso_local i64 @mp_vdpau_get_rgb_format(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
